Added doge phrase factory to create random phrases

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="src/characters/baseCharacter.js"></script>
     <script src="src/characters/playerCharacter.js"></script>
     <script src="src/characters/dogePhrase.js"></script>
+    <script src="src/characters/dogePhraseFactory.js"></script>
 </head>
 <body>
   <!-- do not resize canvas width/height with css -->
