Converting files to js modules

--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/jpg" href="src/characters/largeDoge.jpg">
     <meta charset="utf-8" />
     <title></title>
-    <script src="src/animationControl.js"></script>
-    <script src="src/gameMaster.js"></script>
-    <script src="src/characters/baseCharacter.js"></script>
-    <script src="src/characters/playerCharacter.js"></script>
-    <script src="src/characters/dogePhrase.js"></script>
-    <script src="src/characters/dogePhraseFactory.js"></script>
+    <script type="module" src="src/main.js"></script>
 </head>
 <body>
   <!-- do not resize canvas width/height with css -->
@@ -18,5 +14,4 @@
   <!-- Used for prerendering text -->
   <canvas style="display: none;" id="offscreenCanvas" width="500" height="300"></canvas>
 </body>
-<script src="src/main.js"></script>
 </html>
